tests/files/type_checker_tests/should_pass/283.cmdr
//Test setting types
a = 1;
x = (2.0, false, 1)[a];
println x;
x = "hi";
println x;