tests/files/type_checker_tests/should_fail/082.cmdr
//Should fail if array contains multiple types
x = [1.0, 2, "hi"];
